--- a/src/QMCommunication.Application.Contracts/QMCommunication.Application.Contracts.csproj
+++ b/src/QMCommunication.Application.Contracts/QMCommunication.Application.Contracts.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="IKVM" Version="8.4.5" />
     <PackageReference Include="Volo.Abp.ObjectExtending" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.Account.Application.Contracts" Version="4.3.3" />
     <PackageReference Include="Volo.Abp.Identity.Application.Contracts" Version="4.3.3" />
